2009-11-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-goto-next-thing,
	(twittering-goto-previous-thing): add new commands.
	(twittering-goto-previous-status): check whether prev-pos is not nil.

2009-11-13  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-convert-last-timeline-retrieved):
	New defun to keep a backward compatibility.
	(twittering-last-host, twittering-last-method): Call it.

2009-11-10  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-follow): New command.
	(twittering-unfollow): Likewise.
	(twittering-manage-friendships): New defun.

	* twittering-mode.el (twittering-favorite): New command.
	(twittering-unfavorite): Likewise.
	(twittering-manage-favorites): New defun.

2009-11-09  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-mode-map): Bind "L" to
	`twittering-other-user-list-interactive'.

	* twittering-mode.el (twittering-other-user-list-interactive): Set
	default username interactively.
	(twittering-other-user-list-interactive): Fix typo.

	* twittering-mode.el (twittering-make-http-request): Use let
	instead of let*.

2009-11-07  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Add (preliminary) Lists support.

	* twittering-mode.el (twittering-other-user-list-interactive): New
	command.

	* twittering-mode.el (twittering-get-list): New defun.
	(twittering-get-list-index): Likewise.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-last-timeline-retrieved): Now it
	expects a list, not a string.
	(twittering-last-host, twittering-last-method): New defuns.
	(twittering-list-index-retrieved): New defvar.

	* twittering-mode.el (twittering-get-twits): Rename from
	twittering-get-timeline.
	(twittering-get-timeline): Call twittering-get-twits instead
	of (previous) twittering-get-timeline.
	(twittering-current-timeline): Likewise.